# relationship

./: .gitignore  LICENSE  README.md
relationship-go/: README.md  go.mod  relationship.go
relationship-go/cache/: cache.go
relationship-go/cmd/: main.go
relationship-go/data/: branch.go  input.go  main.go  multiple.go  pair.go  prefix.go  sort.go
relationship-go/datamap/: datamap.go
relationship-go/helpers/: helper.go
relationship-go/id/: id.go
relationship-go/id/pairs/: pairs.go
relationship-go/locale/: guangdong.go  locale.go  north.go
relationship-go/modedata/: mode.go
relationship-go/options/: options.go
relationship-go/options/optionsbuild/: optionsbuild.go
relationship-go/rule/: expression.go  filter.go  replace.go  similar.go
relationship-go/selector/: selector.go
relationship-go/tests/: bench_test.go  unit_test.go
relationship-js/: README.md
relationship-py/: LICENSE  README.md  pyproject.toml
relationship-py/relationship/: __init__.py  cache.py  id_.py  map.py  mode.py  options.py  relationship.py  selector.py  unit.py
relationship-py/relationship/data/: __init__.py  branch.py  input.py  main.py  multiple.py  pair.py  prefix.py  sort.py
relationship-py/relationship/locale_/: __init__.py  guangdong.py  north.py
relationship-py/relationship/rule/: __init__.py  expression.py  filter.py  replace.py  similar.py
relationship-py/relationship/tests/: bench_test.py  unit_test.py
